--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stylis-plugin-rtl": "^2.1.1",
     "typescript": "4.9.3"
   },
   "devDependencies": {
